fix: path 수정 & 에러 return 변경

--- a/templates/memos.html
+++ b/templates/memos.html
@@ -151,7 +151,7 @@
         var title = document.getElementById("new-title").value;
         var content = document.getElementById("new-content").value;
 
-        fetch("/memos/", {
+        fetch("/memo", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
